# libwebauthn

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: docs.yml  dylint.yml  rust-clippy.yml  rust-latest.yml  rust.yml
docs/: logging.md
libwebauthn/: Cargo.toml
libwebauthn-tests/: Cargo.toml
libwebauthn-tests/src/virt/: device.rs  mod.rs  pipe.rs
libwebauthn-tests/tests/: basic_ctap1.rs  basic_ctap2.rs  large_blob.rs  pin_protocols.rs  preflight.rs  prf.rs  signature_roundtrip.rs
libwebauthn/examples/: authenticator_config_hid.rs  bio_enrollment_hid.rs  change_pin_hid.rs  cred_management.rs  debug_related_origins.rs  hid_device_selection.rs  prf_test.rs  u2f_ble.rs  u2f_hid.rs  u2f_nfc.rs  webauthn_cable.rs  webauthn_extensions_hid.rs  webauthn_hid.rs  webauthn_json_hid.rs  webauthn_nfc.rs  webauthn_preflight_hid.rs  webauthn_prf_hid.rs
libwebauthn/examples/ceremony/: u2f_ble.rs  u2f_hid.rs  u2f_nfc.rs  webauthn_ble.rs  webauthn_cable.rs  webauthn_cable_wss.rs  webauthn_hid.rs  webauthn_nfc.rs
libwebauthn/examples/common/: mod.rs
libwebauthn/examples/features/: device_selection_hid.rs  prf_replay.rs  webauthn_extensions_hid.rs  webauthn_preflight_hid.rs  webauthn_prf_cable.rs  webauthn_prf_hid.rs  webauthn_related_origins_hid.rs
libwebauthn/examples/management/: authenticator_config_hid.rs  bio_enrollment_hid.rs  change_pin_hid.rs  cred_management_hid.rs  persistent_cred_management_hid.rs
libwebauthn/src/: fido.rs  lib.rs  management.rs  pin.rs  u2f.rs  ui.rs  webauthn.rs
libwebauthn/src/management/: authenticator_config.rs  authenticator_reset.rs  bio_enrollment.rs  credential_management.rs
libwebauthn/src/ops/: mod.rs  u2f.rs  webauthn.rs
libwebauthn/src/ops/webauthn/: client_data.rs  create.rs  get_assertion.rs  hints.rs  idl.rs  large_blob.rs  make_credential.rs  mod.rs  psl.rs  related_origins.rs  rpid.rs  timeout.rs
libwebauthn/src/ops/webauthn/idl/: base64url.rs  create.rs  get.rs  mod.rs  origin.rs  response.rs  rpid.rs
libwebauthn/src/ops/webauthn/psl/: dafsa.rs  dat.rs  mod.rs  system.rs
libwebauthn/src/ops/webauthn/related_origins/: client.rs  http.rs  mod.rs  reqwest_impl.rs
libwebauthn/src/pin/: mod.rs  persistent_token.rs
libwebauthn/src/proto/: error.rs  mod.rs
libwebauthn/src/proto/ctap1/: model.rs  protocol.rs
libwebauthn/src/proto/ctap1/apdu/: request.rs  response.rs
libwebauthn/src/proto/ctap2/: cose.rs  mod.rs  model.rs  preflight.rs  protocol.rs
libwebauthn/src/proto/ctap2/cbor/: json.rs  mod.rs  request.rs  response.rs  serde.rs
libwebauthn/src/proto/ctap2/model/: authenticator_config.rs  bio_enrollment.rs  client_pin.rs  credential_management.rs  credential_protection.rs  get_assertion.rs  get_info.rs  large_blobs.rs  make_credential.rs
libwebauthn/src/proto/extensions/: prf.rs
libwebauthn/src/tests/: basic_ctap1.rs  basic_ctap2.rs  channel.rs  cred_props.rs  cred_protect.rs  helpers.rs  mod.rs  pin_protocols.rs  prf.rs  resident_keys.rs  user_verification.rs
libwebauthn/src/transport/: channel.rs  device.rs  error.rs  mod.rs  usb.rs
libwebauthn/src/transport/ble/: channel.rs  device.rs  error.rs  framing.rs  mod.rs
libwebauthn/src/transport/ble/btleplug/: connection.rs  error.rs  gatt.rs  manager.rs  mod.rs  pairing.rs
libwebauthn/src/transport/cable/: advertisement.rs  channel.rs  connection_stages.rs  crypto.rs  data_channel.rs  digit_encode.rs  error.rs  known_devices.rs  l2cap.rs  mod.rs  protocol.rs  qr_code_device.rs  tunnel.rs
libwebauthn/src/transport/hid/: channel.rs  device.rs  error.rs  framing.rs  mod.rs
libwebauthn/src/transport/mock/: channel.rs
libwebauthn/src/transport/nfc/: channel.rs  commands.rs  device.rs  error.rs  mod.rs
libwebauthn/src/transport/nfc/libnfc/: mod.rs
libwebauthn/src/transport/nfc/pcsc/: mod.rs
libwebauthn/src/transport/virt/: device.rs  mod.rs  pipe.rs
libwebauthn/src/webauthn/: error.rs  pin_uv_auth_token.rs
libwebauthn/tests/: related_origins.rs
lints/logging_lints/: Cargo.toml  README.md
lints/logging_lints/src/: lib.rs
lints/logging_lints/ui/: main.rs  main.stderr
solo/: Cargo.toml
solo-virtual-key/: Cargo.toml
