[workspace]
resolver = "2"
members = ["libwebauthn", "libwebauthn-tests"]

# The trussed ecosystem is currently a bit messy, so we have to do some patching of the versions
[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "024e0eca5fb7dbd2457831f7c7bffe4341e08775" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "7922d67e9637a87e5625aaff9e5111f0d4ec0346" }
