[package]
name = "libwebauthn"
description = "FIDO2 (WebAuthn) and FIDO U2F platform library for Linux written in Rust "
version = "0.2.2"
authors = ["Alfie Fresta <alfie.fresta@gmail.com>"]
edition = "2021"
license-file = "../COPYING"
homepage = "https://github.com/linux-credentials"
repository = "https://github.com/linux-credentials/libwebauthn"
resolver = "2"

[lib]
name = "libwebauthn"
path = "src/lib.rs"

[features]
default = []
nfc = ["apdu-core", "apdu"]
pcsc = [ "nfc", "dep:pcsc" ]
libnfc = [
  "nfc",
  "nfc1-sys",
  "nfc1",
]

[dependencies]
base64-url = "3.0.0"
dbus = "0.9.5"
tracing = "0.1.29"
maplit = "1.0.2"
sha2 = "0.10.2"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
async-trait = "0.1.36"
futures = "0.3.5"
tokio = { version = "1.45", features = ["full"] }
serde = "1.0.110"
serde_cbor_2 = "0.13"
serde-indexed = "0.2.0"
serde_derive = "1.0.123"
serde_repr = "0.1.6"
serde_bytes = "0.11.5"
num-traits = "0.2"
num-derive = "0.4.1"
byteorder = "1.3.4"
num_enum = "0.7.1"
x509-parser = "0.17.0"
time = "0.3.35"
curve25519-dalek = "4.1.3"
hex = "0.4.3"
mockall = "0.13.1"
hidapi = { version = "2.4.1", default-features = false, features = [
    "linux-static-hidraw",
] }
bitflags = "2.4.1"
rand = "0.8.5"
p256 = { version = "0.13.2", features = ["ecdh", "arithmetic", "serde"] }
heapless = "0.7"
cosey = "0.3.2"
aes = "0.8.2"
hmac = "0.12.1"
cbc = { version = "0.1", features = ["alloc"] }
hkdf = "0.12"
text_io = "0.1"
tungstenite = { version = "0.26.2" }
tokio-tungstenite = { version = "0.26", features = [
    "rustls-tls-native-roots",
] }
rustls = { version = "0.23.27", default-features = false, features = ["ring"] }
tokio-stream = "0.1"
snow = { version = "0.10", features = ["use-p256"] }
ctap-types = { version = "0.4.0" }
btleplug = "0.11.7"
thiserror = "2.0.12"
apdu-core = { version = "0.4.0", optional = true }
apdu = { version = "0.4.0", optional = true }
pcsc = { version = "2.9.0", optional = true }
nfc1 = { version = "0.6.0", optional = true, default-features = false }
nfc1-sys = { version = "0.3.9", optional = true, default-features = false }

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
qrcode = "0.14.1"

# We can't have "virtual-hid-device" a feature, because
# we need to be able to publish libwebauthn to crates.io
# and trussted-staging has sadly not been published, so we have
# to use it as dev-dependencies instead. And dev-features do not exist.
# All of the below are for having a virtual HID device based
# on fido-authenticator.
ctaphid-dispatch = { version = "0.3" }
ctaphid = { version = "0.3.1", default-features = false }
fido-authenticator = { git = "https://github.com/Nitrokey/fido-authenticator.git",tag = "v0.1.1-nitrokey.27", features = ["dispatch", "log-all"] }
littlefs2 = { version = "0.6.0" }
trussed = { version = "0.1", features = ["virt"] }
trussed-staging = { version = "0.3.0", features = ["chunked", "hkdf", "virt", "fs-info"] }
interchange = { version = "0.3.0" }
tempfile = { version = "3.21" }
# For turning on logging in fido-authenticator
delog = { version = "0.1", features = ["std-log"]}
# For turning on logging in unittests
test-log = { version = "0.2" }

# The trussed ecosystem is currently a bit messy, so we have to do some patching of the versions
[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "024e0eca5fb7dbd2457831f7c7bffe4341e08775" }
trussed-staging = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "7922d67e9637a87e5625aaff9e5111f0d4ec0346" }

# Only compile NFC-examples, if NFC-features are used
[[example]]
name = "u2f_nfc"
required-features = ["nfc"]

[[example]]
name = "webauthn_nfc"
required-features = ["nfc"]
