[package]
name = "libwebauthn"
description = "FIDO2 (WebAuthn) and FIDO U2F platform library for Linux written in Rust "
version = "0.4.0"
authors = ["Alfie Fresta <alfie.fresta@gmail.com>"]
edition = "2021"
license-file = "../COPYING"
homepage = "https://github.com/linux-credentials"
repository = "https://github.com/linux-credentials/libwebauthn"
resolver = "2"

[lib]
name = "libwebauthn"
path = "src/lib.rs"

[features]
default = []
nfc = ["apdu-core", "apdu"]
nfc-backend-pcsc = ["nfc", "dep:pcsc"]
nfc-backend-libnfc = [
  "nfc",
  "nfc1-sys",
  "nfc1",
]
# Exposes the `HidPipeBackend` trait and `virtual_device()` constructor so that
# external crates (e.g. libwebauthn-tests) can plug in a virtual HID transport
# for end-to-end tests.
virt = []

[dependencies]
base64-url = "3.0.0"
dbus = "0.9.5"
tracing = "0.1.29"
idna = "1.0.3"
publicsuffix = "2.3"
url = "2.5"
maplit = "1.0.2"
sha2 = "0.10.2"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
async-trait = "0.1.36"
futures = "0.3.5"
tokio = { version = "1.45", features = ["full"] }
serde = "1.0.110"
serde_cbor_2 = "0.13"
serde-indexed = "0.2.0"
serde_derive = "1.0.123"
serde_repr = "0.1.6"
serde_bytes = "0.11.5"
num-traits = "0.2"
num-derive = "0.4.1"
byteorder = "1.3.4"
num_enum = "0.7.1"
x509-parser = "0.17.0"
time = "0.3.35"
curve25519-dalek = "4.1.3"
hex = "0.4.3"
mockall = "0.13.1"
hidapi = { version = "2.4.1", default-features = false, features = [
    "linux-static-hidraw",
] }
bitflags = "2.4.1"
rand = "0.8.5"
p256 = { version = "0.13.2", features = ["ecdh", "arithmetic", "serde"] }
heapless = "0.7"
cosey = "0.3.2"
aes = "0.8.2"
hmac = "0.12.1"
cbc = { version = "0.1", features = ["alloc"] }
hkdf = "0.12"
text_io = "0.1"
tungstenite = { version = "0.26.2" }
tokio-tungstenite = { version = "0.26", features = [
    "rustls-tls-native-roots",
] }
rustls = { version = "0.23.27", default-features = false, features = ["ring"] }
tokio-stream = "0.1"
snow = { version = "0.10", features = ["use-p256"] }
ctap-types = { version = "0.4.0" }
btleplug = "0.11.7"
thiserror = "2.0.12"
serde_json = "1.0.141"
apdu-core = { version = "0.4.0", optional = true }
apdu = { version = "0.4.0", optional = true }
pcsc = { version = "2.9.0", optional = true }
nfc1 = { version = "=0.6.0", optional = true, default-features = false }
nfc1-sys = { version = "0.3.9", optional = true, default-features = false }

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
qrcode = "0.14.1"
# For turning on logging in unittests
test-log = { version = "0.2" }

# Examples live in three subdirectories under examples/, grouped by purpose.
# Cargo does not auto-discover examples in subdirectories, so each one is
# listed here explicitly.
#
# ceremony/ - register and authenticate, one per transport
# features/ - per-feature demos (extensions, preflight, prf, replay, device selection)
# management/ - CTAP2 admin (PIN, biometrics, config, credential management)

[[example]]
name = "u2f_hid"
path = "examples/ceremony/u2f_hid.rs"

[[example]]
name = "u2f_ble"
path = "examples/ceremony/u2f_ble.rs"

[[example]]
name = "u2f_nfc"
path = "examples/ceremony/u2f_nfc.rs"
required-features = ["nfc"]

[[example]]
name = "webauthn_hid"
path = "examples/ceremony/webauthn_hid.rs"

[[example]]
name = "webauthn_nfc"
path = "examples/ceremony/webauthn_nfc.rs"
required-features = ["nfc"]

[[example]]
name = "webauthn_cable"
path = "examples/ceremony/webauthn_cable.rs"

[[example]]
name = "webauthn_extensions_hid"
path = "examples/features/webauthn_extensions_hid.rs"

[[example]]
name = "webauthn_preflight_hid"
path = "examples/features/webauthn_preflight_hid.rs"

[[example]]
name = "webauthn_prf_hid"
path = "examples/features/webauthn_prf_hid.rs"

[[example]]
name = "prf_replay"
path = "examples/features/prf_replay.rs"

[[example]]
name = "device_selection_hid"
path = "examples/features/device_selection_hid.rs"

[[example]]
name = "change_pin_hid"
path = "examples/management/change_pin_hid.rs"

[[example]]
name = "bio_enrollment_hid"
path = "examples/management/bio_enrollment_hid.rs"

[[example]]
name = "authenticator_config_hid"
path = "examples/management/authenticator_config_hid.rs"

[[example]]
name = "cred_management_hid"
path = "examples/management/cred_management_hid.rs"
