[package]
name = "solo-virtual-key"
version = "0.2.0"
edition = "2018"
description = "Rust wrapper for the virtual U2F key from SoloKeys' solo1 project, intended for testing U2F applications "
authors = ["Alfie Fresta <alfie.fresta@gmail.com>"]
license-file = "src/ext/LICENSE"
homepage = "https://github.com/linux-credentials"
repository = "https://github.com/linux-credentials/libwebauthn"

[lib]
name = "solo"
path = "src/lib.rs"

[dependencies]
log = "0.4"
env_logger = "0.11.8"
tokio = {version = "1.45", features = ["process", "io-util", "rt"]}